--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:yahoo/react-intl.git"
+    "url": "git@github.com:AlexJozwicki/react-intl.git"
   },
   "main": "index.js",
   "jsnext:main": "src/main.js",
