--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-intl-es6",
-  "version": "1.0.0-alpha1",
+  "version": "1.0.0-beta1",
   "description": "React ES6 Components for internationalization.",
   "keywords": [
     "es6",
